MDEV-5862 server_audit test fails in buildbot on Mac (labrador).         The RTLD_DEFAULT value on Labrador machine is not NULL,         so the dlsym() commands in the server_audit just fail         to bind the necessary functions.         Fixed by using RTLD_DEFAULT explicitly.